src/Components/SideNav/sidenav.module.css
.hamburger {
  width: 2rem;
  height: 2rem;
  margin: auto;
  display: block;
  padding-left: .2rem;
  z-index: 3;
  position: absolute;
  top: .3rem;
  left: .3rem;
  fill: var(--font-color);
}

.container, .drawer {
  position: sticky;
  top: 0;
  transition: .5s;
  width: 3rem;
  height: 100vh;
  background-color: var(--sidenav-color);
}

.scroll {
  animation: fade-in-right ease 0.4s forwards;
}

@keyframes fade-in-right {
  from {
    opacity: 0;
    transform: translateX(-15px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

.links {
  padding-top: 2rem;
  padding-left: 2rem;
}

.drawer {
  width: 14.5rem;
  height: 100vh;
  transition: .5s;
}

.drawerTitle {
  position: absolute;
  top: 58vh;
  left: .4rem;
  font-size: 1.8rem;
  z-index: 0;
  transform: rotate(-90deg);
  transform-origin: 0 0;
  -webkit-transform-origin: 0 0;
  -moz-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  -o-transform-origin: 0 0;
  -webkit-transform: rotate(-90deg); 
  -moz-transform: rotate(-90deg); 
  -ms-transform: rotate(-90deg); 
  -o-transform: rotate(-90deg);
  font-family: var(--font-family-header); 
}

.a {
  font-weight: lighter;
  padding: .5rem 2rem;
  text-decoration: none;
  font-size: 1.5rem;
  color: var(--font-color);
  display: block;
  transition: 1s;
  font-family: var(--font-family-header);
  opacity: 0;
}

.title {
  color: var(--font-color);
  font-family: var(--font-family-header); 
}

.resume {
  transition-delay: 1s;
  transition: 1s;
  position: absolute;
  bottom: 0;
  line-height: 2rem;
  height: 2rem;
  margin: 2rem;
  padding: .5rem 1.75rem;
  border: var(--border-sm);
  border-radius: var(--border-radius);
}

.colors {
  width: 4rem;
  height: 4rem;
  margin: auto;
  display: block;
  margin-left: 8rem;
  z-index: 3;
  position: absolute;
  bottom: 13rem;
}


/* Tablet */
@media only screen and (min-width : 30em) {
  .container, .drawer {
    width: 6rem;
  }

  .drawer {
    width: 22.5rem;
  }

  .hamburger {
    width: 4rem;
    height: 4rem;
    top: .6rem;
    left: .8rem;
  }

  .drawerTitle{
    font-size: 3.4rem;
    position: absolute;
    top: 60vh;
    left: .8rem;
  }

  .a {
    font-size: 2.5rem;
  }
  
  .resume {
    padding: 1rem 2.5rem;
  }

  .links {
    padding-top: 4rem;
    padding-left: 5rem;
  }
}

/* Desktop */
@media only screen and (min-width : 50em) {

  .links {
    padding-top: 0rem;
    padding-left: 0rem;
  }

  .container {
    position: sticky;
    top: 0;
    width: 20.5rem;
  }
  
  .title {
    font-size: 3rem;
    padding: 1.4rem 3rem 6rem 3rem;
  }
  
  .a {
    padding: 1rem 3rem;
    font-size: 2.5rem;
  }
  
  .resume {
    line-height: 3rem;
    height: 3rem;
    margin: 3rem;
    padding: 1rem 3rem 1.2rem 3rem;
  }
}

/* XL Desktop */
@media only screen and (min-width : 90em) {

}

